<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:paddingTop="20dp"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:paddingLeft="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentTop="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="false"
            android:layout_alignWithParentIfMissing="false"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/Main_text"
                    android:id="@+id/textView4"
                    android:layout_gravity="center_horizontal"
                    android:autoText="false"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            </LinearLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton6"
                    android:maxWidth="200dp"
                    android:text="@string/n_inp_new"
                    android:textColor="@color/checked"
                    android:checked="true"
                    android:onClick="changeInp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:minHeight="70dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/n1"
                    android:id="@+id/textView"
                    android:textColor="@color/checked"
                    android:maxWidth="200dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText"
                    android:minWidth="50dp"
                    android:inputType="numberDecimal" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:minHeight="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/n2"
                    android:id="@+id/textView3"
                    android:textColor="@color/checked"
                    android:maxWidth="200dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText2"
                    android:inputType="numberDecimal" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="70dp"
                android:gravity="left">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton4"
                    android:singleLine="false"
                    android:text="@string/v_inp"
                    android:maxWidth="200dp"
                    android:textColor="@color/unchecked"
                    android:onClick="changeInp"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText10"
                    android:singleLine="false"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="50dp"
                android:gravity="left">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox"
                    android:singleLine="false"
                    android:text="@string/d1"
                    android:textColor="@color/unchecked"
                    android:maxWidth="200dp"
                    android:minHeight="50dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText3"
                    android:inputType="numberDecimal" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="50dp"
                android:gravity="left">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox2"
                    android:singleLine="false"
                    android:text="@string/d2"
                    android:textColor="@color/unchecked"
                    android:maxWidth="200dp"
                    android:minHeight="50dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText4"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="70dp"
                android:gravity="left">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox3"
                    android:singleLine="false"
                    android:text="@string/lamb_inp"
                    android:maxWidth="200dp"
                    android:textColor="@color/unchecked" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText5"
                    android:singleLine="false"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/type"
                    android:id="@+id/textView2"
                    android:maxWidth="150dp"
                    android:gravity="center_horizontal"
                    android:paddingBottom="0dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:paddingRight="20dp"
                    android:textColor="@color/unchecked" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_st"
                    android:id="@+id/radioButton2"
                    android:checked="true"
                    android:textColor="@color/checked"
                    android:onClick="changeB"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_gr"
                    android:id="@+id/radioButton"
                    android:checked="false"
                    android:onClick="changeB"/>
            </TableRow>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button4"
                android:clickable="false"
                android:paddingBottom="10dp"
                android:text="@string/go" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:text="@string/cancel" />

        </TableLayout>
    </ScrollView>

</RelativeLayout>