<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView2"
        android:layout_alignParentTop="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/imageView"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:src="@drawable/calc_db" />
            </LinearLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="3dp"
                android:background="@color/unchecked" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="3dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/dano"
                    android:id="@+id/textView17"
                    android:textColor="@color/checked" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/db_calc"
                    android:id="@+id/radioButton3"
                    android:checked="false"
                    android:maxWidth="100dp"
                    android:onClick="onRBclicked"
                    />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editText6" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:minHeight="50dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/db_calc_second"
                    android:id="@+id/radioButton4"
                    android:maxWidth="200dp"
                    android:minHeight="20dp"
                    android:onClick="onRBclicked"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editText7" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="3dp"
                android:background="@color/unchecked"></TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"></LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/p1"
                        android:id="@+id/textView7"
                        android:textColor="@color/checked" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/p2"
                        android:id="@+id/textView8"
                        android:textColor="@color/checked"
                        android:paddingLeft="10dp" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:minHeight="50dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pp"
                    android:id="@+id/radioButton5"
                    android:maxWidth="100dp"
                    android:onClick="onRBclicked"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="50dp"
                    android:gravity="bottom">

                    <EditText
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/editText8"
                        android:maxWidth="200dp" />

                    <EditText
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/editText9" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:minHeight="50dp">

            </TableRow>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/go"
                    android:id="@+id/button6" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear"
                    android:id="@+id/button7" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:id="@+id/button8" />
            </LinearLayout>

        </TableLayout>
    </ScrollView>

</RelativeLayout>